package com.musicstream.auth.model;

public enum UserRole {
    USER,
    ADMIN
}
